Fix dark mode selection

--- a/assets/main.css
+++ b/assets/main.css
@@ -216,6 +216,14 @@ footer h6 a {
   background: #006385;
 }
 
+@media (forced-colors: active) and (prefers-color-scheme: dark) {
+  .top-bar-section li.active:not(.has-form) a:not(.button) {
+    background-color: #fff;
+    color: #000;
+    forced-color-adjust: none;
+  }
+}
+
 .top-bar .toggle-topbar {
   margin-top: 8px;
 }
